[gd_scene load_steps=26 format=3 uid="uid://ckannwtpfgiag"]

[ext_resource type="Texture2D" uid="uid://c3v8eghbd0yua" path="res://generic-female/generic-female-left/frame0.png" id="1_02q1w"]
[ext_resource type="Script" uid="uid://6o65f1db6k63" path="res://Player/player.gd" id="1_du36b"]
[ext_resource type="Texture2D" uid="uid://rcqxkgxrb73r" path="res://generic-female/generic-female-left/frame1.png" id="2_6rwr6"]
[ext_resource type="Texture2D" uid="uid://x20i4wpp1np6" path="res://generic-female/generic-female-left/frame2.png" id="3_ihrla"]
[ext_resource type="Texture2D" uid="uid://b3wmxkruqot5p" path="res://generic-female/generic-female-left/frame3.png" id="4_tton6"]
[ext_resource type="Texture2D" uid="uid://bxr4bdji1i8ip" path="res://generic-female/generic-female-left/frame4.png" id="5_vf0gr"]
[ext_resource type="Texture2D" uid="uid://ca57cg6eona7j" path="res://generic-female/generic-female-left/frame5.png" id="6_lb1oe"]
[ext_resource type="Texture2D" uid="uid://du1pvru44rgkg" path="res://generic-female/generic-female-left/frame6.png" id="7_abn7c"]
[ext_resource type="Texture2D" uid="uid://ddrdxid8f53bo" path="res://generic-female/generic-female-left/frame7.png" id="8_hsodc"]
[ext_resource type="Texture2D" uid="uid://chi75m6hsfsx8" path="res://generic-female/generic-female-right/frame0.png" id="9_aemr0"]
[ext_resource type="Texture2D" uid="uid://dsxcpvuq1l5y3" path="res://generic-female/generic-female-right/frame1.png" id="10_pfbau"]
[ext_resource type="Texture2D" uid="uid://ci6bxgmjsj401" path="res://generic-female/generic-female-right/frame2.png" id="11_c1u1p"]
[ext_resource type="Texture2D" uid="uid://bi8ism8qba60b" path="res://generic-female/generic-female-right/frame3.png" id="12_v51q4"]
[ext_resource type="Texture2D" uid="uid://bic4thb26oy81" path="res://generic-female/generic-female-right/frame4.png" id="13_e5hnr"]
[ext_resource type="Texture2D" uid="uid://h2s4e0iyrkmq" path="res://generic-female/generic-female-right/frame5.png" id="14_xl8m8"]
[ext_resource type="Texture2D" uid="uid://2pbntpht0n6v" path="res://generic-female/generic-female-right/frame6.png" id="15_a571a"]
[ext_resource type="Texture2D" uid="uid://brkhnsaq7y870" path="res://generic-female/generic-female-right/frame7.png" id="16_yfjdv"]
[ext_resource type="Script" uid="uid://glmt1q3mwtvt" path="res://Scripts/Health.gd" id="21_ehw61"]
[ext_resource type="PackedScene" uid="uid://cuf1v8aemm21q" path="res://UI/PlayerHud/PlayerHud.tscn" id="21_k0v1x"]
[ext_resource type="PackedScene" uid="uid://bnfvukeeb7vf5" path="res://Player/Mods/ExperienceManagerMod/experience_manager_mod.tscn" id="22_ak4tj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_efsi2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_02q1w")
}, {
"duration": 1.0,
"texture": ExtResource("2_6rwr6")
}, {
"duration": 1.0,
"texture": ExtResource("3_ihrla")
}, {
"duration": 1.0,
"texture": ExtResource("4_tton6")
}, {
"duration": 1.0,
"texture": ExtResource("5_vf0gr")
}, {
"duration": 1.0,
"texture": ExtResource("6_lb1oe")
}, {
"duration": 1.0,
"texture": ExtResource("7_abn7c")
}, {
"duration": 1.0,
"texture": ExtResource("8_hsodc")
}],
"loop": true,
"name": &"left",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_aemr0")
}, {
"duration": 1.0,
"texture": ExtResource("10_pfbau")
}, {
"duration": 1.0,
"texture": ExtResource("11_c1u1p")
}, {
"duration": 1.0,
"texture": ExtResource("12_v51q4")
}, {
"duration": 1.0,
"texture": ExtResource("13_e5hnr")
}, {
"duration": 1.0,
"texture": ExtResource("14_xl8m8")
}, {
"duration": 1.0,
"texture": ExtResource("15_a571a")
}, {
"duration": 1.0,
"texture": ExtResource("16_yfjdv")
}],
"loop": true,
"name": &"right",
"speed": 14.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_152h1"]
radius = 3.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t3y3a"]
radius = 4.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oewk6"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2fuqr"]
radius = 21.13

[node name="Player" type="CharacterBody2D" groups=["persist"]]
position = Vector2(0, -2)
script = ExtResource("1_du36b")

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_efsi2")
animation = &"right"
frame_progress = 0.588546

[node name="Health" type="Node2D" parent="."]
rotation = 1.57079
script = ExtResource("21_ehw61")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_152h1")

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_t3y3a")

[node name="IFrameTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerHud" parent="." instance=ExtResource("21_k0v1x")]
zoom = Vector2(1.25, 1.25)

[node name="MagnetArea" type="Area2D" parent="."]

[node name="MagnetHitbox" type="CollisionShape2D" parent="MagnetArea"]
shape = SubResource("CircleShape2D_oewk6")

[node name="ExperienceManagerMod" parent="." instance=ExtResource("22_ak4tj")]

[node name="InteractArea" type="Area2D" parent="."]

[node name="InteractHitbox" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CircleShape2D_2fuqr")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="IFrameTimer" to="." method="_on_i_frame_timer_timeout"]
[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
